fix: added initial height and withd to image for the content to not shift abruptly during loading

--- a/src/components/MovieItem/MovieItem.scss
+++ b/src/components/MovieItem/MovieItem.scss
@@ -25,7 +25,8 @@
         border-top-right-radius: 0;
         border-bottom-left-radius: $border-radius-base;
         border-bottom-right-radius: 0;
-        height: auto;
+        width: 200px;
+        height: 300px;
       }
     }
 
